--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^7.8.7",
     "mongoose-unique-validator": "^4.0.1",
     "multer": "^1.4.5-lts.2",
-    "sharp": "^0.34.1"
+    "sharp": "^0.34.1",
+    "validator": "^13.15.0"
   }
 }
