--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "mongoose-unique-validator": "^4.0.1",
     "multer": "^1.4.5-lts.2",
     "sharp": "^0.34.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui": "^5.27.0",
+    "swagger-ui-express": "^5.0.1",
     "validator": "^13.15.0"
   }
 }
