--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
   ],
   "routes": [
     { "src": "/swagger.json", "dest": "/server.js" },
-    { "src": "/api-docs(.*)", "dest": "/server.js" },
+    { "src": "/api-docs", "dest": "/server.js" },
     { "src": "/api/(.*)", "dest": "/server.js" },
     { "src": "/images/(.*)", "dest": "/server.js" },
     { "src": "/(.*)", "dest": "/server.js" }
