fix swagger route

--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
     { "src": "server.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/api-docs", "dest": "/server.js" },
+    { "src": "/api-docs(?:/.*)?", "dest": "/server.js" },
     { "src": "/api/(.*)", "dest": "/server.js" },
     { "src": "/images/(.*)", "dest": "/server.js" },
     { "src": "/(.*)", "dest": "/server.js" }
